<resources>
    <string name="app_name">Play Time</string>
    <string name="action_settings">Settings</string>
    <string name="mExit">Exit</string>
    <string name="mGame1">Guess the Number</string>
    <string name="mGame2">Name the Capital</string>
    <string name="mainActTitle">Welcome to the App</string>
    <string name="btnG1">Guess the Number</string>
    <string name="btnG2">Name the Capital</string>
    <string name="title_activity_guess_number">GuessNumber</string>
    <string name="title_activity_name_capital">NameCapital</string>
    <string name="min">Minimun Range</string>
    <string name="max">Maximun Range</string>
    <string name="yourSelc">Enter your your number</string>
    <string name="instructions">Please select a minimun range and a maximun range, enter your selection and then press Enter to generate a random number</string>
    <string name="title_activity_play_sounds">PlaySounds</string>
    <string name="songs">Play Songs</string>
    <string name="sound1">Play Song 1</string>
    <string name="sound2">Play Song 2</string>
    <string name="sound3">Play Song 3</string>
    <string name="soundInstructions">click a button to start a stong</string>
    <string name="soundTitle">Play a Song</string>
    <string name="ncInstructions">Enter the capital of the country displayed. The program will determined if is correct.</string>
    <string name="country">Country:</string>
    <string name="capital">Capital:</string>
    <string name="btnEnter">Enter</string>
    <string name="hint">Enter your answer here</string>

</resources>
