<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PlaySounds"
    tools:showIn="@layout/activity_play_sounds">


    <TextView
        android:id="@+id/sTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soundTitle"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="680dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_sound1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playSound"
            android:text="@string/sound1" />

        <Button
            android:id="@+id/button_sound2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playSound"
            android:text="@string/sound2" />

        <Button
            android:id="@+id/button_sound3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playSound"
            android:text="@string/sound3" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="155dp" />
    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>